--- a/formulario1.css
+++ b/formulario1.css
@@ -1,83 +1,163 @@
-body{
+/* Altura completa */
+html, body {
     margin: 0;
+    padding: 0;
+    height: 100%;
+}
+
+/* Fuente y colores base */
+body {
     font-family: sans-serif;
     background-color: lightgreen;
     color: black;
 }
 
-header{
-    background-color: green;
-    padding: auto;
-    position: sticky;
+/* Grid principal */
+.grid-container {
+    display: grid;
+    grid-template-areas:
+        "header header"
+        "main main"
+        "footer footer";
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: auto 1fr auto;
+    height: 100%;
 }
 
-.top-bar{
+/* Header sticky */
+header {
+    grid-area: header;
+    background-color: green;
+    padding: 1rem;
+    position: sticky;
+    top: 0;
+    z-index: 10;
+}
+
+.top-bar {
     display: grid;
     grid-template-columns: 33% 33% 33%;
     align-items: center;
 }
 
-.marca{
-    grid-column: 1 / 2;
+.marca {
     text-align: left;
     font-size: 2.5rem;
-    color: black;
     margin-left: 30px;
 }
 
-.cont{
+.cont {
     grid-column: 3 / 4;
+    text-align: right;
 }
 
-.comentartios{
-    color: white;
-    border: none;
+.comentarios, .steam {
     padding: 0.5rem 1rem;
     border-radius: 5px;
+    border: none;
     cursor: pointer;
 }
 
-.search-bar{
+.steam {
+    background-color: lightblue;
+}
+
+.search-bar {
     padding: 0.5rem;
     border: 1px solid gray;
-    margin-left: 40px;
-    margin-right: 40px;
+    margin: 0 40px;
     max-width: 20%;
 }
 
-.steam{
-    background-color: lightblue;
-    color: black;
-    border: none;
-    padding: 0.5rem 1rem;
-    border-radius: 5px;
-    cursor: pointer;
+/* Main ocupa espacio disponible */
+.container {
+    grid-area: main;
+    background-color: rgb(8, 211, 8);
 }
 
-.contenedor{
+/* Contenedor de formulario */
+.contenedor {
     display: grid;
     grid-template-columns: 50% 50%;
-    justify-content: space-between;
     padding: 2rem;
-    background-color: rgb(8, 211, 8);
-    margin: 0 auto;
     max-width: 100%;
 }
 
-.formulario{
-    grid-column: 1 / 2;
-    grid-row: wrap;
+.titulo {
+    grid-column: 1 / 3;
+    margin-left: 75px;
 }
 
-label{
+.formulario {
+    grid-column: 1 / 2;
+    padding-top: 1.5rem;
+    padding-left: 3rem;
+    margin-left: 75px;
+}
+
+.terminos {
+    grid-column: 2 / 3;
+    width: 500px;
+    padding-top: 1.5rem;
+    margin-left: 75px;
+}
+
+label {
     margin-top: 1rem;
     font-weight: bold;
+    display: block;
 }
 
-input, textarea{
+input, textarea {
     margin-top: 0.3rem;
     padding: 0.6rem;
     border: 1px solid black;
     border-radius: 5px;
-    width: 50%;
+    width: 80%;
+}
+
+.checkbox-label {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    margin-top: 1rem;
+
+}
+
+input[type="checkbox"] {
+    width: auto;
+    margin: 15px;
+    transform: scale(1.3);
+    cursor: pointer;
+}
+
+.botones {
+    display: flex;
+    gap: 15px;
+    margin-top: 1rem;
+}
+
+.cancel, .submit {
+    padding: 0.7rem 1.5rem;
+    border: none;
+    border-radius: 8px;
+    cursor: pointer;
+    font-weight: bold;
+}
+
+.cancel { background-color: #ff6666; color: white; }
+.submit { background-color: #007bff; color: white; }
+
+/* Footer */
+footer {
+    grid-area: footer;
+    background-color: green;
+    text-align: center;
+    padding: 2rem;
+}
+
+.community-link, .main-link {
+    text-decoration: none;
+    font-weight: bold;
+    color: black;
 }
