--- a/paginaInicio.css
+++ b/paginaInicio.css
@@ -15,6 +15,9 @@ body {
 img{
     width: 450px;
     height: 250px;
+    margin-right: 10px;
+    margin-left: 10px;
+    border-radius: 10px;
 }
 
 .grid-container {
@@ -23,9 +26,9 @@ img{
     grid-template-columns: 1fr 1fr 1fr;
     height: 100%;
     grid-template-areas: 
-        "header header header"
-        "aside  main main"
-        "aside footer footer";
+        "header" "header" "header"
+        "aside"  "main" "main"
+        "footer" "footer" "footer";
     grid-gap: 10px;
     padding: 10px;
 }
@@ -40,7 +43,20 @@ header {
 }
 
 aside {
+    grid-area: aside;
+    padding: 10px;
+    width: 300px;
     grid-column: 1 / 2;
+    grid-row: 2 / 3;
+    background-color: greenyellow;
+}
+
+main {
+    grid-area: main;
+    grid-row: 2 / 3;
+    grid-column: 2 / 4;
+    justify-items: end;
+    margin-right: 100px;
 }
 
 .generos {
@@ -82,11 +98,40 @@ aside {
     max-width: 20%;
 }
 
+.categoria {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: larger;
+    font-weight: bold;
+    margin: 10px;
+    padding: 2.5px;
+    width: 250px;
+    text-align: left;
+    border-radius: 5px;
+    border: solid grey 1px;
+}
+
+a {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: large;
+    margin: 10px;
+    padding: 5px;
+    text-decoration: none;
+    color: black;
+}
+
+p {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: xx-large;
+    font-weight: bold;
+    grid-area: main;
+}
+
 footer {
     grid-area: footer;
     background-color: green;
     text-align: center;
     padding: 2rem;
+    margin-top: 20px;
 }
 
 .community-link, .main-link {
