--- a/estiloJuegos.css
+++ b/estiloJuegos.css
@@ -17,6 +17,8 @@
         margin-right: 10px;
         margin-left: 10px;
         border-radius: 10px;
+        position: absolute;
+        top: 570px;
     }
 
     .grid-container {
@@ -156,6 +158,7 @@
         grid-area: main;
         overflow-y: auto;
         background-color: #b7ffb7;
+        position: relative;
     }
 
     h2 {
