--- a/juegos/estiloJuegos.css
+++ b/juegos/estiloJuegos.css
@@ -140,8 +140,7 @@
     }
 
     p {
-        font-size: xx-large;
-        font-weight: bold;
+        font-size: medium;
         grid-area: main;
     }
 
@@ -205,6 +204,7 @@
     main .bloque-info h3,
     main .bloque-info h4,
     main .bloque-info h5 {
+        font-size: larger;
         margin-bottom: 8px;
         color: #2f6f2f;
     }
