--- a/formulario/formulario1.css
+++ b/formulario/formulario1.css
@@ -23,7 +23,7 @@ body {
 
 header {
     grid-area: header;
-    background-color: green;
+    background-color: #2f6f2f;
     padding: 1rem;
     position: sticky;
     top: 0;
@@ -67,7 +67,7 @@ header {
 
 .container {
     grid-area: main;
-    background-color: rgb(8, 211, 8);
+    background-color: rgb(94, 177, 91);
 }
 
 .contenedor {
@@ -144,12 +144,24 @@ input[type="checkbox"] {
 
 footer {
     grid-area: footer;
-    background-color: green;
+    background-color: #2f6f2f;
     text-align: center;
     padding: 2rem;
+    color: white;
+}
+
+.copyright{
+    font-size: initial;
+    font-weight: bold;
 }
 
 .community-link, .main-link {
+    text-decoration: none;
+    font-weight: bold;
+    color: white;
+}
+
+.steam-link{
     text-decoration: none;
     font-weight: bold;
     color: black;
